--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,15 @@
         "prettier"
     ],
     "rules": {
+      "class-methods-use-this": "off",
+      "camelcase": "off",
+      "no-useless-constructor": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
       "no-use-before-define": "off",
       "@typescript-eslint/no-use-before-define": [
         "error"
@@ -39,6 +48,7 @@
       ],
       "prettier/prettier": "error",
       "import/prefer-default-export": "off",
+      "import/no-extraneous-dependencies": "off"
     },
     "settings": {
       "import/resolver": {
