--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "forceConsistentCasingInFileNames": true
   },
   "exclude": [
-    "./prettier.config.js"
+    "./prettier.config.js",
+    "./jest.config.js"
   ]
 }
