--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,8 @@
       "@typescript-eslint/no-unused-vars": [
         "error",
         {
-          "argsIgnorePattern": "_"
+          "argsIgnorePattern": "_",
+          "ignoreRestSiblings": true
         }
       ],
       "no-use-before-define": "off",
