Chore: coverage files exclude

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
   },
   "exclude": [
     "./prettier.config.js",
-    "./jest.config.js"
+    "./jest.config.js",
+    "./coverage/**/*.js"
   ]
 }
