--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^2.6.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   },
