--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:server": "tsnd -r tsconfig-paths/register --inspect --transpile-only --ignore node_modules src/shared/infra/http/server.ts",
     "test": "jest",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:migrate": "yarn typeorm migration:run",
     "prepare": "husky install",
     "lint": "eslint --fix ."
   },
